tests/baselines/reference/for-of30.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of30.ts(16,15): error TS2322: Type 'StringIterator' is not assignable to type 'Iterable<string>'.
  Types of property '[Symbol.iterator]' are incompatible.
    Type '() => StringIterator' is not assignable to type '() => Iterator<string>'.
      Type 'StringIterator' is not assignable to type 'Iterator<string>'.
        Types of property 'return' are incompatible.
          Type 'number' is not assignable to type '(value?: any) => IteratorResult<string>'.


==== tests/cases/conformance/es6/for-ofStatements/for-of30.ts (1 errors) ====
    class StringIterator {
        next() {
            return {
                done: false,
                value: ""
            }
        }
        
        return = 0;
        
        [Symbol.iterator]() {
            return this;
        }
    }
    
    for (var v of new StringIterator) { }
                  ~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{|StringIterator|0|}' is not assignable to type '{|Iterable|1|}<string>'.
!!! error TS2322:   Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2322:     Type '() => {|StringIterator|2|}' is not assignable to type '() => {|Iterator|3|}<string>'.
!!! error TS2322:       Type '{|StringIterator|4|}' is not assignable to type '{|Iterator|5|}<string>'.
!!! error TS2322:         Types of property 'return' are incompatible.
!!! error TS2322:           Type 'number' is not assignable to type '(value?: any) => {|IteratorResult|6|}<string>'.
!!! annotated symbol 0 tests/cases/conformance/es6/for-ofStatements/for-of30.ts:1:7
!!! annotated symbol 1 /.ts/lib.es2015.iterable.d.ts:42:11
!!! annotated symbol 2 tests/cases/conformance/es6/for-ofStatements/for-of30.ts:1:7
!!! annotated symbol 3 /.ts/lib.es2015.iterable.d.ts:36:11
!!! annotated symbol 4 tests/cases/conformance/es6/for-ofStatements/for-of30.ts:1:7
!!! annotated symbol 5 /.ts/lib.es2015.iterable.d.ts:36:11
!!! annotated symbol 6 /.ts/lib.es2015.iterable.d.ts:31:11